changed from medium model to turbo model

--- a/scripts/NLP_radio_processing/N00_data_labeling.ipynb
+++ b/scripts/NLP_radio_processing/N00_data_labeling.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Data labeling\n",
     "\n",
-    "For using BERT and comparing results of VADER, I´ll label the dataset in this notebook. Moreover, I will eliminate the end-of-race radios for having a more concise model. If the dataset gets very small, I will raise a flag for extracting more radio messages."
+    "For using BERT and comparing results of VADER, I´ll label the dataset in this notebook. Moreover, I will eliminate the end-of-race radios for having a more concise model. If the dataset gets very small, I will raise a flag for extracting more radio messages.\n",
+    "\n",
+    "Then, I´ll need to rerun the Vader notebook to have the results on our cleaned data."
    ]
   }
  ],
