finished radio extraction

--- a/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
+++ b/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
@@ -1711,8 +1711,12 @@
     "* Different Context: End-of-race communications follow different patterns (congratulatory, reflective) than tactical in-race messages.\n",
     "\n",
     "* Sentiment Distortion: Including these highly emotional messages would create an unrealistic sentiment distribution compared to the strategic communications we need to analyze.\n",
+    "---\n",
     "\n",
     "#### Therefore, in the labelling radios notebook, I´ll make this cleaning before labeling. If the dataset gets highly reduced, I may need to rerun the code with new radio messages. \n",
+    "\n",
+    "This happened, so I added 3 more Grand Prix to have more data. I will rerun the code and change the percentages. Then, I will run the code again without the post-race messages.\n",
+    "\n",
     "---\n",
     "### Approaches for BERT-based sentiment analysis:\n",
     "\n",
