proceeding to clean the post race radios

--- a/scripts/NLP_radio_processing/N00_data_labeling.ipynb
+++ b/scripts/NLP_radio_processing/N00_data_labeling.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 210 radio messages\n"
+      "Loaded 684 radio messages\n"
      ]
     },
     {
@@ -82,7 +82,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "eb237996-5cee-4831-b4cb-3a55a7910360",
+       "ref": "6d7ed8b1-94a9-4a17-89ad-f9bcb84d7472",
        "rows": [
         [
          "0",
@@ -105,7 +105,7 @@
          "1",
          "driver_(1,)_belgium_radio_60.mp3",
          "..\\..\\f1-strategy\\data\\audio\\driver_(1,)\\driver_(1,)_belgium_radio_60.mp3",
-         "Semi- This was awesome!",
+         "FREDER Reggie",
          "5.424"
         ],
         [
@@ -178,7 +178,7 @@
        "      <td>1</td>\n",
        "      <td>driver_(1,)_belgium_radio_60.mp3</td>\n",
        "      <td>..\\..\\f1-strategy\\data\\audio\\driver_(1,)\\drive...</td>\n",
-       "      <td>Semi- This was awesome!</td>\n",
+       "      <td>FREDER Reggie</td>\n",
        "      <td>5.424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -219,12 +219,12 @@
        "                                                text  duration  \n",
        "0  So don't forget Max, use your head please. Are...    15.168  \n",
        "1  Okay Max, we're expecting rain in about 9 or 1...    15.576  \n",
-       "2                            Semi- This was awesome!     5.424  \n",
+       "2                                      FREDER Reggie     5.424  \n",
        "3  You might find this lap that you meet a little...     5.088  \n",
        "4  Just another two or three minutes to get throu...     5.712  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Identified 14 potential post-race messages out of 210 total\n"
+      "Identified 37 potential post-race messages out of 684 total\n"
      ]
     }
    ],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -397,6 +397,17 @@
     "### Manual Review and Filtering\n",
     "\n",
     "After manual review, 49 radios are going to be deleted. Therefore, I think it is a good idea to **add more radios, at least 3 races more, to have a good amount of radios**. After that, I will proceed to make again a manual analysis and eliminate the radios."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # After review, create a filtered dataset without post-race messages\n",
+    "# # Option 1: Use the automated detection (after verifying it's accurate)\n",
+    "# df_filtered = df[df['is_post_race'] == False].copy()\n"
    ]
   },
   {
@@ -611,10 +622,6 @@
     }
    ],
    "source": [
-    "# # After review, create a filtered dataset without post-race messages\n",
-    "# # Option 1: Use the automated detection (after verifying it's accurate)\n",
-    "# df_filtered = df[df['is_post_race'] == False].copy()\n",
-    "\n",
     "# Option 2: Manual filtering using message indices\n",
     "post_race_indices = [list of confirmed post-race message indices]\n",
     "df_filtered = df[~df.index.isin(post_race_indices)].copy()\n",
