added function for data labeling

--- a/scripts/NLP_radio_processing/N00_data_labeling.ipynb
+++ b/scripts/NLP_radio_processing/N00_data_labeling.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "f335050f-160a-4602-9005-fb9229ac0e52",
+       "ref": "08576f47-a301-4e0c-a0e7-cc6f24e14a17",
        "rows": [
         [
          "0",
@@ -224,7 +224,7 @@
        "4  Just another two or three minutes to get throu...     5.712  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "0f53a180-4e8c-463c-a246-fb94f53aa7a1",
+       "ref": "77aa4483-36e7-4d5c-ad6b-981a759a9316",
        "rows": [
         [
          "0",
@@ -674,7 +674,7 @@
        "5       1   So settle into standard race management now Max.          "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,6 +683,167 @@
     "df_filtered[\"sentiment\"] =\"\"\n",
     "\n",
     "df_filtered.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Labeling the data manually\n",
+    "\n",
+    "The next functions helps me to manually label the data, using:\n",
+    "* n as negative.\n",
+    "* p as positive.\n",
+    "* x as neutral.\n",
+    "* s as skip."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ejecuta esta celda solo una vez al inicio\n",
+    "if 'current_idx' not in globals():\n",
+    "    current_idx = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message #0 from Driver 1:\n",
+      "\"So don't forget Max, use your head please. Are we both doing it or what? You just follow my instruction. No, I want to know if both cars do it. Max, please follow my instruction and trust it. Thank you.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #1 from Driver 1:\n",
+      "\"Okay Max, we're expecting rain in about 9 or 10 minutes. What are your thoughts? That you can get there or should we box? We'd need to box this lap to cover Leclerc. I can't see the weather, can I? I don't know.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #2 from Driver 1:\n",
+      "\"You might find this lap that you meet a little bit more water.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #3 from Driver 1:\n",
+      "\"Just another two or three minutes to get through this.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #4 from Driver 1:\n",
+      "\"So settle into standard race management now Max.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #5 from Driver 1:\n",
+      "\"Use a lot of attire on an Outland Max. Not sure that was sensible.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #6 from Driver 1:\n",
+      "\"This time I had reasonable deg in the first stint. I'd ask you to use your head a bit more.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #7 from Driver 1:\n",
+      "\"Thank you.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #8 from Driver 1:\n",
+      "\"I can also push on if we do another stop, a little bit of mid-stop training. No, not this time.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #9 from Driver 1:\n",
+      "\"How was the deg max? No, it's not okay Anderson\"\n",
+      "Labeled as: negative\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First, make a copy of your DataFrame to avoid modifying the original\n",
+    "df_labeling = df_filtered.copy()\n",
+    "df_labeling = df_labeling.reset_index(drop=True)\n",
+    "# Set default value for sentiment\n",
+    "df_labeling['sentiment'] = 'neutral'  # Set neutral as default\n",
+    "\n",
+    "# Function to display message and get input\n",
+    "def label_sentiment(row_idx):\n",
+    "    message = df_labeling.loc[row_idx, 'radio_message']\n",
+    "    driver = df_labeling.loc[row_idx, 'driver']  # Assuming you have this column\n",
+    "    \n",
+    "    print(f\"Message #{row_idx} from Driver {driver}:\")\n",
+    "    print(f\"\\\"{message}\\\"\")\n",
+    "    \n",
+    "    valid_input = False\n",
+    "    while not valid_input:\n",
+    "        label = input(\"Enter sentiment (p=positive, n=negative, x=neutral, s=skip): \").lower()\n",
+    "        \n",
+    "        if label == 'p':\n",
+    "            df_labeling.loc[row_idx, 'sentiment'] = 'positive'\n",
+    "            valid_input = True\n",
+    "        elif label == 'n':\n",
+    "            df_labeling.loc[row_idx, 'sentiment'] = 'negative'\n",
+    "            valid_input = True\n",
+    "        elif label == 'x':\n",
+    "            df_labeling.loc[row_idx, 'sentiment'] = 'neutral'\n",
+    "            valid_input = True\n",
+    "        elif label == 's':\n",
+    "            print(\"Skipping to next message...\")\n",
+    "            valid_input = True\n",
+    "        else:\n",
+    "            print(\"Invalid input. Please use p, n, x, or s.\")\n",
+    "    \n",
+    "    return df_labeling.loc[row_idx, 'sentiment']\n",
+    "\n",
+    "# Example usage - can be run cell by cell\n",
+    "batch_size = 100\n",
+    "\n",
+    "# Label messages in batches\n",
+    "for i in range(current_idx, min(current_idx + batch_size, len(df_labeling))):\n",
+    "    label = label_sentiment(i)\n",
+    "    print(f\"Labeled as: {label}\\n{'-'*50}\")\n",
+    "\n",
+    "# Save progress\n",
+    "df_labeling.to_csv('../../outputs/week4/labeled_data_progress.csv', index=False)\n",
+    "\n",
+    "# Update global counter\n",
+    "current_idx += batch_size\n",
+    "print(f\"\\nCompletado hasta el mensaje {current_idx}. La próxima ejecución empezará desde aquí.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File renamed successfully to radio_labeled_data.csv\n",
+      "Total messages: 603\n",
+      "Labeled messages: 603\n",
+      "Sentiment distribution: sentiment\n",
+      "neutral     602\n",
+      "negative      1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Rename the progress file to final file\n",
+    "os.rename('../../outputs/week4/labeled_data_progress.csv', '../../outputs/week4/radio_labeled_data.csv')\n",
+    "print(\"File renamed successfully to radio_labeled_data.csv\")\n",
+    "\n",
+    "# Load the final data to check it\n",
+    "final_df = pd.read_csv('../../outputs/week4/radio_labeled_data.csv')\n",
+    "print(f\"Total messages: {len(final_df)}\")\n",
+    "print(f\"Labeled messages: {final_df['sentiment'].notna().sum()}\")\n",
+    "print(f\"Sentiment distribution: {final_df['sentiment'].value_counts()}\")"
    ]
   }
  ],
