added function for data labeling

--- a/scripts/NLP_radio_processing/N00_data_labeling.ipynb
+++ b/scripts/NLP_radio_processing/N00_data_labeling.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "08576f47-a301-4e0c-a0e7-cc6f24e14a17",
+       "ref": "46f33abb-4482-4020-8c36-0d945f09f5f1",
        "rows": [
         [
          "0",
@@ -224,7 +224,7 @@
        "4  Just another two or three minutes to get throu...     5.712  "
       ]
      },
-     "execution_count": 179,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "77aa4483-36e7-4d5c-ad6b-981a759a9316",
+       "ref": "a210b30c-967a-4bbe-90b0-f45f67803c55",
        "rows": [
         [
          "0",
@@ -674,7 +674,7 @@
        "5       1   So settle into standard race management now Max.          "
       ]
      },
-     "execution_count": 187,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,67 +700,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Ejecuta esta celda solo una vez al inicio\n",
-    "if 'current_idx' not in globals():\n",
-    "    current_idx = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Message #0 from Driver 1:\n",
-      "\"So don't forget Max, use your head please. Are we both doing it or what? You just follow my instruction. No, I want to know if both cars do it. Max, please follow my instruction and trust it. Thank you.\"\n",
-      "Labeled as: neutral\n",
-      "--------------------------------------------------\n",
-      "Message #1 from Driver 1:\n",
-      "\"Okay Max, we're expecting rain in about 9 or 10 minutes. What are your thoughts? That you can get there or should we box? We'd need to box this lap to cover Leclerc. I can't see the weather, can I? I don't know.\"\n",
-      "Labeled as: neutral\n",
-      "--------------------------------------------------\n",
-      "Message #2 from Driver 1:\n",
-      "\"You might find this lap that you meet a little bit more water.\"\n",
-      "Labeled as: neutral\n",
-      "--------------------------------------------------\n",
-      "Message #3 from Driver 1:\n",
-      "\"Just another two or three minutes to get through this.\"\n",
-      "Labeled as: neutral\n",
-      "--------------------------------------------------\n",
-      "Message #4 from Driver 1:\n",
-      "\"So settle into standard race management now Max.\"\n",
-      "Labeled as: neutral\n",
-      "--------------------------------------------------\n",
-      "Message #5 from Driver 1:\n",
-      "\"Use a lot of attire on an Outland Max. Not sure that was sensible.\"\n",
-      "Labeled as: neutral\n",
-      "--------------------------------------------------\n",
-      "Message #6 from Driver 1:\n",
-      "\"This time I had reasonable deg in the first stint. I'd ask you to use your head a bit more.\"\n",
-      "Labeled as: neutral\n",
-      "--------------------------------------------------\n",
-      "Message #7 from Driver 1:\n",
-      "\"Thank you.\"\n",
-      "Labeled as: neutral\n",
-      "--------------------------------------------------\n",
-      "Message #8 from Driver 1:\n",
-      "\"I can also push on if we do another stop, a little bit of mid-stop training. No, not this time.\"\n",
-      "Labeled as: neutral\n",
-      "--------------------------------------------------\n",
-      "Message #9 from Driver 1:\n",
-      "\"How was the deg max? No, it's not okay Anderson\"\n",
-      "Labeled as: negative\n",
-      "--------------------------------------------------\n"
-     ]
-    }
-   ],
    "source": [
     "# First, make a copy of your DataFrame to avoid modifying the original\n",
     "df_labeling = df_filtered.copy()\n",
@@ -796,26 +738,72 @@
     "            print(\"Invalid input. Please use p, n, x, or s.\")\n",
     "    \n",
     "    return df_labeling.loc[row_idx, 'sentiment']\n",
-    "\n",
-    "# Example usage - can be run cell by cell\n",
-    "batch_size = 100\n",
-    "\n",
-    "# Label messages in batches\n",
-    "for i in range(current_idx, min(current_idx + batch_size, len(df_labeling))):\n",
-    "    label = label_sentiment(i)\n",
-    "    print(f\"Labeled as: {label}\\n{'-'*50}\")\n",
-    "\n",
-    "# Save progress\n",
-    "df_labeling.to_csv('../../outputs/week4/labeled_data_progress.csv', index=False)\n",
-    "\n",
-    "# Update global counter\n",
-    "current_idx += batch_size\n",
-    "print(f\"\\nCompletado hasta el mensaje {current_idx}. La próxima ejecución empezará desde aquí.\")\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message #0 from Driver 1:\n",
+      "\"So don't forget Max, use your head please. Are we both doing it or what? You just follow my instruction. No, I want to know if both cars do it. Max, please follow my instruction and trust it. Thank you.\"\n",
+      "Invalid input. Please use p, n, x, or s.\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #1 from Driver 1:\n",
+      "\"Okay Max, we're expecting rain in about 9 or 10 minutes. What are your thoughts? That you can get there or should we box? We'd need to box this lap to cover Leclerc. I can't see the weather, can I? I don't know.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #2 from Driver 1:\n",
+      "\"You might find this lap that you meet a little bit more water.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #3 from Driver 1:\n",
+      "\"Just another two or three minutes to get through this.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #4 from Driver 1:\n",
+      "\"So settle into standard race management now Max.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #5 from Driver 1:\n",
+      "\"Use a lot of attire on an Outland Max. Not sure that was sensible.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #6 from Driver 1:\n",
+      "\"This time I had reasonable deg in the first stint. I'd ask you to use your head a bit more.\"\n",
+      "Labeled as: neutral\n",
+      "--------------------------------------------------\n",
+      "Message #7 from Driver 1:\n",
+      "\"Thank you.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage - can be run cell by cell\n",
+    "start_idx = 0  # Start from the first unlabeled message\n",
+    "batch_size = 10  # Label 10 messages at a time\n",
+    "\n",
+    "# You can run this cell multiple times to label in batches\n",
+    "for i in range(start_idx, min(start_idx + batch_size, len(df_labeling))):\n",
+    "    label = label_sentiment(i)\n",
+    "    print(f\"Labeled as: {label}\\n{'-'*50}\")\n",
+    "\n",
+    "# After labeling a batch, save progress\n",
+    "df_labeling.to_csv('../../outputs/week4/labeled_data_progress.csv', index=False)\n",
+    "\n",
+    "# Continue from where you left off by setting start_idx to the next unlabeled row\n",
+    "start_idx += batch_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
